worked on small issues ( uploaded )

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ a.list-group-item,.list-group-item a{color:#337ab7 ;}
 .select2-container--bootstrap .select2-search--dropdown .select2-search__field, .select2-container--bootstrap .select2-selection,
 .select2-container--bootstrap.select2-container--focus .select2-selection, .select2-container--bootstrap.select2-container--open
 .select2-selection{box-shadow: none;}
+.select2-container--disabled.select2-selection,.select2-container--disabled.select2-selection--single{background-color: #eee !important;cursor: default !important;}
 .select2-container--bootstrap .select2-selection--single{height: 34px;line-height: 1.42857;padding: 6px 24px 6px 12px;}
 .select2-container--bootstrap .select2-selection{background-color: #fff;border: 1px solid #c2cad8;border-radius: 4px;color: #555;font-size: 14px;outline: 0 none;}
 .select2-container--bootstrap .select2-selection--single .select2-selection__arrow{ bottom: 0;position: absolute;right: 12px;top: 0;width: 4px;}
@@ -61,6 +62,7 @@ a.list-group-item,.list-group-item a{color:#337ab7 ;}
 .select2-container--bootstrap .select2-selection__clear{ color: #999;cursor: pointer;float: right;font-weight: bold;margin-right: 10px;}
 .select2-container--bootstrap .select2-selection--multiple .select2-selection__choice{  background: #fff none repeat scroll 0 0;border: 1px solid #ccc;border-radius: 4px;color: #555;cursor: default;float: left;margin: 5px 0 0 6px;padding: 0 6px;}
 .select2-container--bootstrap .select2-results__option[aria-selected="true"]{background-color:#e1e5ec;color:#262626;}
+
 .smallText{font-size:11px;display: inline-block;}
 .upvote{border-radius: 50%;border:1px solid #36c6d3;padding: 5px;cursor: pointer;}
 .downvote{border-radius: 50%;border:1px solid #ed6b75;padding: 5px;cursor: pointer;}
